gitops/platform/monitoring/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: shopfast-delivery-platform
    pod-security.kubernetes.io/enforce: baseline
